--- a/src/_lib-components/carousel/carousel.css
+++ b/src/_lib-components/carousel/carousel.css
@@ -1,12 +1,13 @@
 .carousel {
   width:100%;
-  max-width: 100vw;
+  max-width: var(--page-width);
   background: inherit;
   display: flex;
   align-items: center;
   flex-flow: row nowrap;
   position: relative;
-  --carousel-gap: var(--size-7);
+  --carousel-gap: var(--size-fluid-3);
+padding-bottom:var(--size-5);
 }
 
 ul {
@@ -51,6 +52,7 @@ ul::-webkit-scrollbar {
   text-shadow: none;
   font-size: var(--size-fluid-3);
   z-index: var(--layer-1);
+  transform:scale(1);
   transition: all 1s var(--ease-elastic-1);
 }
 
@@ -63,9 +65,9 @@ ul::-webkit-scrollbar {
 }
 
 .flipper.hidden {
-  width: 0;
   opacity: 0;
   pointer-events: none;
+  transform:scale(0);
 }
 
 .pagination {
@@ -73,24 +75,26 @@ ul::-webkit-scrollbar {
   justify-content: center;
   align-items: flex-end;
   position:absolute;
-  bottom:-1.5rem;
-  width:100%;
-  gap:.5rem;
+  bottom: 0;
+  width:inherit;
+  gap:var(--size-fluid-1);
+  padding: var(--size-1) 0;
   
 }
 
 .pagination button {
-  width:1rem;
-  height:1rem;
+  width:var(--size-3);
+  height:var(--size-3);
   min-width: unset;
   padding:0;
-  border-radius: 1rem;
-  border:none;
-  opacity:.5;
-  background-color: var(--brand-light);
-
+  border-radius: var(--size-3);
+  background-color:transparent;
+  border-color: currentColor;
+  border-width:1px;
+  opacity: .5;
 }
 
-.pagination button[aria-selected="true"] {
-  opacity:1;
+.pagination button[aria-expanded="true"] {
+  background-color:currentcolor;
+  border-color: transparent;
 }
