--- a/src/global.css
+++ b/src/global.css
@@ -18,6 +18,9 @@
   --page-height: 100vh;
   --top-nav-height: clamp(2.5rem, 8vh, 4rem);
   --bottom-nav-height: clamp(2.5rem, 8vh, 4rem);
+  --main-width: 100vw;
+  --main-height: calc(var(--page-height) - (var(--top-nav-height) + var(--bottom-nav-height)));
+
 }
 
 html {
@@ -40,14 +43,6 @@ body {
   position: relative;
   padding: 0;
   background-color:var(--surface-1);
-}
-
-
-
-main {
-  grid-area: main;
-  display: flex;
-  flex-direction: column;
 }
 
 a {
