--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,7 @@
 footer {
-  grid-area: footer;
+  grid-area: main;
   display: flex;
   flex-direction: column;
   max-width: var(--page-width);
+  align-self: flex-end;
 }
