--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,15 +3,10 @@ header {
   position:sticky;
   top:0;
   max-width: var(--page-width);
-  z-index:99;
+  z-index:var(--layer-5);
   display: flex;
-  background: white;
-  border-bottom: 10px solid var(--qwik-dark-purple);
-}
-
-header .logo a {
-  display: inline-block;
-  padding: 10px 10px 7px 20px;
+  background:var(--surface-1);
+  box-shadow: var(--shadow-2);
 }
 
 header ul {
