--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,6 +7,7 @@ header {
   display: flex;
   background:var(--surface-1);
   box-shadow: var(--shadow-2);
+  border-bottom: var(--border-size-1) solid var(--surface-3);
 }
 
 header ul {
